--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "md-chips-select": "^1.0.2",
     "angular-bootstrap": "^2.5.0",
     "angular-ui-router-anim-in-out": "^1.0.2",
-    "angular-ui-select": "^0.19.6"
+    "angular-ui-select": "^0.19.6",
+    "angular-loading-bar": "^0.9.0"
   }
 }
