--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,7 @@
     "angular-bootstrap": "^2.5.0",
     "angular-ui-router-anim-in-out": "^1.0.2",
     "angular-ui-select": "^0.19.6",
-    "angular-loading-bar": "^0.9.0"
+    "angular-loading-bar": "^0.9.0",
+    "angular-xeditable": "^0.6.0"
   }
 }
