--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,8 @@
     "angular-ui-router-anim-in-out": "^1.0.2",
     "angular-ui-select": "^0.19.6",
     "angular-loading-bar": "^0.9.0",
-    "angular-xeditable": "^0.6.0"
+    "angular-xeditable": "^0.6.0",
+    "angular-websocket": "^2.0.0",
+    "sweetalert": "^1.1.3"
   }
 }
