--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,7 @@
     "angular-loading-bar": "^0.9.0",
     "angular-xeditable": "^0.6.0",
     "angular-websocket": "^2.0.0",
-    "sweetalert": "^1.1.3"
+    "sweetalert": "^1.1.3",
+    "angular-drag-and-drop-lists": "^2.1.0"
   }
 }
