--- a/bower.json
+++ b/bower.json
@@ -43,6 +43,7 @@
     "ng-file-upload": "^12.2.13",
     "angular-resizable": "^1.2.0",
     "angular-ui-tree": "^2.22.5",
-    "highcharts": "^5.0.10"
+    "highcharts": "^5.0.10",
+    "angularjs-slider": "^6.1.1"
   }
 }
